Testing fix of disabling zoom on mobile

--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,10 @@
     }
 }
 
+* {
+    touch-action: manipulation;
+}
+
 body {
     background-color:#46494c;
     display: flex;
